--- a/css/memory.css
+++ b/css/memory.css
@@ -32,3 +32,52 @@ body {
   text-align: center;
   padding: 45px 30px;
 }
+body {
+  display: flex;
+}
+.side {
+  border: 3px black solid;
+}
+.cardKnow {
+  width: 50px;
+  height: 50px;
+}
+.youWin {
+  width: 1000px;
+  margin-top: 30px;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  color: green;
+  background-color: greenyellow;
+  font-size: 100px;
+  border: 10px solid green;
+  padding: 50px;
+  text-align: center;
+}
+.youFailed {
+  width: 1000px;
+  margin-top: 30px;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  color: red;
+  background-color: pink;
+  font-size: 100px;
+  border: 10px solid red;
+  padding: 50px;
+  text-align: center;
+}
+.youFailed button,
+.youWin button {
+  border-radius: 15px;
+  border: 3px blue solid;
+  background-color: aqua;
+  color: blue;
+  font-size: 20px;
+  padding: 15px;
+  margin-top: 20px;
+  width: 150px;
+}
