--- a/css/memory.css
+++ b/css/memory.css
@@ -42,6 +42,15 @@ body {
   width: 50px;
   height: 50px;
 }
+.left{
+  font-size: 20px;
+  display: flex;
+}
+.cover {
+  padding: 15px;
+  font-size: 30px;
+  background-color: white;
+}
 .youWin {
   width: 1000px;
   margin-top: 30px;
