--- a/css/memory.css
+++ b/css/memory.css
@@ -8,6 +8,9 @@ body {
   justify-content: center;
   padding: 20px;
 }
+aside {
+  margin: 10px;
+}
 .game {
   width: 650px;
   height: 650px;
@@ -36,13 +39,22 @@ body {
   display: flex;
 }
 .side {
-  border: 3px black solid;
+  /* border: 3px black solid; */
+  margin-left: 30px;
+}
+.side div {
+  margin: 5px;
 }
 .cardKnow {
   width: 50px;
   height: 50px;
 }
-.left{
+.cardKnow img {
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+.left {
   font-size: 20px;
   display: flex;
 }
