--- a/css/TIC Tac Toe.css
+++ b/css/TIC Tac Toe.css
@@ -10,13 +10,19 @@ body {
   display: flex;
   justify-content: center;
 }
+main {
+  display: none;
+}
 .youre {
   padding: 50px 80px;
-  font-size: 30px;
+  position: absolute;
   top: 100px;
   background-color: rgb(240, 184, 184);
-  position: absolute;
   text-align: center;
+}
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 60px;
 }
 .youre button {
   color: red;
