--- a/css/car.css
+++ b/css/car.css
@@ -69,7 +69,14 @@ footer {
   flex-direction: column;
   margin-top: 250px;
   text-align: center;
-  color: rgb(155, 132, 0);
+  background-color: #333;
+  /* color: rgb(155, 132, 0); */
+}
+footer h1 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  color: white;
+  text-align: center;
 }
 .red {
   background-color: red;
