--- a/css/ship.css
+++ b/css/ship.css
@@ -75,7 +75,13 @@ footer {
   flex-direction: column;
   margin-top: 100px;
   text-align: center;
-  color: rgb(155, 132, 0);
+  background-color: #333;
+}
+footer h1 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  color: white;
+  text-align: center;
 }
 .red {
   background-color: red;
