--- a/css/memory.css
+++ b/css/memory.css
@@ -40,8 +40,12 @@ body {
 }
 .side {
   /* border: 3px black solid; */
- /* Reset some default browser styles */
-body, div, h1, p, button {
+/* Reset some default browser styles */
+body,
+div,
+h1,
+p,
+button {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -57,7 +61,7 @@ body {
 
 /* Style for the aside */
 aside {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   padding: 20px;
   text-align: center;
   display: flex;
@@ -76,7 +80,7 @@ aside h1 {
 
 aside .cover {
   background-color: #fff;
-  border: 2px solid #4CAF50;
+  border: 2px solid #4caf50;
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
@@ -151,7 +155,8 @@ main {
 }
 
 /* Style for the winning and failing messages */
-.youWin, .youFailed {
+.youWin,
+.youFailed {
   display: none;
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
@@ -165,8 +170,9 @@ main {
   z-index: 10;
 }
 
-.youWin button, .youFailed button {
-  background-color: #4CAF50;
+.youWin button,
+.youFailed button {
+  background-color: #4caf50;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -175,6 +181,7 @@ main {
   margin-top: 10px;
 }
 
-.youWin button:hover, .youFailed button:hover {
+.youWin button:hover,
+.youFailed button:hover {
   background-color: #45a049;
 }
