--- a/css/Games-menu.css
+++ b/css/Games-menu.css
@@ -86,6 +86,8 @@ main {
 }
 
 .menu {
+  height: 130px;
+  width: 130px;
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -101,6 +103,8 @@ main {
 }
 
 .menu a {
+  height: 100%;
+  width: 100%;
   text-decoration: none;
   color: #4caf50;
   font-size: 1.2em;
@@ -108,6 +112,8 @@ main {
 }
 
 .menu a p {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 10px 0;
 }
