--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -186,3 +186,30 @@ button a {
   color: white;
   padding: 10px 20px;
 }
+
+section {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+section button {
+  width: 100px;
+  height: 40px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+section button:hover {
+  background-color: #45a049;
+}
+
+section button:focus {
+  box-shadow: 0 0 5px #4caf50;
+  background-color: rgb(161, 229, 2);
+}
