--- a/css/memory.css
+++ b/css/memory.css
@@ -182,3 +182,45 @@ main {
 .youFailed button:hover {
   background-color: #45a049;
 }
+
+
+nav {
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav img {
+  height: 50px; /* Adjust the height as needed */
+}
+
+.nav-right {
+  display: flex;
+  align-items: center;
+}
+
+nav .logOut {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1em;
+  border-radius: 5px;
+  margin-left: 20px; /* Adjust the margin as needed */
+  transition: background-color 0.3s;
+}
+
+nav .logOut:hover {
+  background-color: #45a049;
+}
+
+nav .user,
+nav .score {
+  margin-left: 20px; /* Adjust the margin as needed */
+  font-size: 1.2em;
+  text-align: center;
+}
