--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -212,3 +212,72 @@ section button:focus {
   box-shadow: 0 0 5px #4caf50;
   background-color: rgb(161, 229, 2);
 }
+
+/* Style for the winning and failing messages */
+.youWin {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  z-index: 10;
+}
+
+.youWin button {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.youWin button:hover {
+  background-color: #45a049;
+}
+nav {
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav img {
+  height: 50px; /* Adjust the height as needed */
+}
+
+.nav-right {
+  display: flex;
+  align-items: center;
+}
+
+nav .logOut {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1em;
+  border-radius: 5px;
+  margin-left: 20px; /* Adjust the margin as needed */
+  transition: background-color 0.3s;
+}
+
+nav .logOut:hover {
+  background-color: #45a049;
+}
+
+nav .user,
+nav .score {
+  margin-left: 20px; /* Adjust the margin as needed */
+  font-size: 1.2em;
+  text-align: center;
+}
