--- a/css/TIC-Tac-Toe.css
+++ b/css/TIC-Tac-Toe.css
@@ -1,33 +1,82 @@
 * {
   box-sizing: border-box;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
+
 :root {
   --boardSize: 400px;
 }
+
 body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
+
 main {
   display: none;
 }
+
+nav {
+  width: 100%;
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+nav img {
+  height: 50px;
+}
+
+.nav-right {
+  display: flex;
+  align-items: center;
+}
+
+nav .logOut {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1em;
+  border-radius: 5px;
+  margin-left: 20px;
+  transition: background-color 0.3s;
+}
+
+nav .logOut:hover {
+  background-color: #45a049;
+}
+
+nav .user,
+nav .score {
+  margin-left: 20px;
+  font-size: 1.2em;
+  text-align: center;
+}
+
 .youre {
-  /* padding: 50px 80px; */
   position: absolute;
   top: 100px;
   background-color: #4caf50;
   text-align: center;
   border-radius: 12px;
-  box-shadow: black;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 h1 {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 60px;
   margin: 50px 80px 0px 80px;
 }
+
 .youre button {
   width: 100px;
   height: 100px;
@@ -39,10 +88,12 @@ h1 {
   margin: 60px 30px;
   border: none;
 }
+
 .youre button:hover {
   background-color: #dde8dd;
   border: white solid 4px;
 }
+
 .board {
   margin-top: 50px;
   display: grid;
@@ -50,19 +101,22 @@ h1 {
   height: var(--boardSize);
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  border: 5px solid rgb(56, 157, 56);
+  border: 10px solid rgb(56, 157, 56);
 }
+
 .cell {
   border: 3px solid rgb(56, 157, 56);
   text-align: center;
   font-size: 90px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .alerts {
   position: absolute;
   display: flex;
   justify-content: center;
 }
+
 .youWin {
   display: none;
   width: 700px;
@@ -74,6 +128,7 @@ h1 {
   text-align: center;
   font-size: 45px;
 }
+
 .youFailed {
   display: none;
   width: 700px;
@@ -85,6 +140,7 @@ h1 {
   text-align: center;
   font-size: 45px;
 }
+
 .youFailed button,
 .youWin button {
   padding: 15px 25px;
