--- a/css/car.css
+++ b/css/car.css
@@ -2,6 +2,33 @@ main {
   display: flex;
   justify-content: center;
 }
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+header .color.current {
+  margin-left: 10px;
+}
+
+header a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #f0f0f0;
+  color: #333;
+  text-decoration: none;
+  border: 1px solid #333;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+  margin-right: 10px;
+}
+
+header a:hover {
+  background-color: #333;
+  color: #f0f0f0;
+}
 .bodyUp {
   height: 0px;
   width: 250px;
@@ -59,7 +86,7 @@ main {
 }
 .bodyDown {
   position: absolute;
-  top: 233px;
+  top: 248px;
   height: 150px;
   width: 650px;
   border: black 5px solid;
