--- a/css/Games-menu.css
+++ b/css/Games-menu.css
@@ -105,6 +105,21 @@ footer div {
   margin: 5px;
 }
 
+footer .playPause-music {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1em;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+footer .playPause-music:hover {
+  background-color: #45a049; /* צבע רקע בעת מעבר עכבר */
+}
+
 nav {
   background-color: #333;
   color: white;
