--- a/css/TIC-Tac-Toe.css
+++ b/css/TIC-Tac-Toe.css
@@ -8,7 +8,7 @@
   --boardSize: 400px;
 }
 
-body {
+.body {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -149,4 +149,39 @@ h1 {
   color: blue;
   font-size: 20px;
   font-weight: 600;
+}
+.header {
+  background-color: rgb(240, 243, 202);
+  position: fixed;
+  top: 50%;
+  padding: 30px 15px 30px 30px;
+  border-radius: 12px;
+  border: 3px solid green;
+}
+ol {
+  list-style: none;
+  padding: 0 15px;
+}
+
+@media only screen and (max-width: 1260px) {
+  .header {
+    margin-top: 20px;
+    max-width: 260px;
+  }
+}
+@media only screen and (max-width: 930px) {
+  .header {
+    margin-top: 90px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .board {
+    width: 350px;
+  }
+}
+@media only screen and (max-width: 380px) {
+  nav {
+    font-size: 0.7em;
+  }
 }
