--- a/css/memory.css
+++ b/css/memory.css
@@ -101,6 +101,7 @@ aside .cover:hover {
 main {
   flex: 1;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 20px;
@@ -158,6 +159,29 @@ main {
   max-width: 100%;
   max-height: 100%;
   display: none;
+}
+
+footer {
+  margin-top: 20px;
+  text-align: center;
+}
+
+footer button {
+  width: 130px;
+  height: 40px;
+  margin-bottom: 25px;
+  cursor: pointer;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+#back{
+  font-size:0.93em;
+}
+
+footer button:hover {
+  background-color: #45a049;
 }
 
 /* Style for the winning and failing messages */
